add main section my projects

--- a/src/app/desktop/header/header.component.html
+++ b/src/app/desktop/header/header.component.html
@@ -1,5 +1,7 @@
 <section>
     <header>
+
+        <!-- >> Header Left Container -->
         <div class="header-left">
             <figure>
                 <img src="img/header/person.png" alt="person">
@@ -7,13 +9,19 @@
                 <div class="left-img-bg-hover"></div>
             </figure>
         </div>
+
+        <!-- >> Header Right Container -->
         <div class="header-right">
             <div>
+
+                <!-- >> Logo -->
                 <div class="right-logo">
                     <figure>
                         <hr>
                         <img src="img/logos/logo.svg" alt="logo">
                     </figure>
+
+                    <!-- >> Icon Bar -->
                     <div class="right-icon-bar">
                         <div>
                             <figure class="right-icon-bar-item">
@@ -40,10 +48,14 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- >> Headline -->
                 <div class="right-headline">
                     <h1>Dominik Mozelt</h1>
                     <h2>{{ this.app.header.headline }}</h2>
                 </div>
+
+                <!-- >> Button -->
                 <div class="right-btn">
                     <figure>
                         <hr>
