--- a/src/styles/_global-colors.scss
+++ b/src/styles/_global-colors.scss
@@ -1,5 +1,8 @@
+$devmode: true;
+
 // Main Colors
 $main-color-black: #262E34;
+$main-color-lightblack: #2c373f;
 $main-color-lightblue: #89BCD9;
 $main-color-white: #F8F5EC;
 $main-color-white-hover: #F8F5EC1F;
