--- a/src/app/desktop/main/my-skills/my-skills.component.scss
+++ b/src/app/desktop/main/my-skills/my-skills.component.scss
@@ -32,6 +32,7 @@ section {
     @include flex($ai: flex-start, $g: 64px);
 }
 
+// >> Left Container
 .c-left {
     flex: 1;
     display: flex;
@@ -60,6 +61,7 @@ section {
     }
 }
 
+// >> Right Container
 .c-right {
     flex: 1;
 
