--- a/src/app/desktop/main/need-a-teamplayer/need-a-teamplayer.component.html
+++ b/src/app/desktop/main/need-a-teamplayer/need-a-teamplayer.component.html
@@ -1,1 +1,36 @@
-<p>need-a-teamplayer works!</p>
+<section>
+    <div>
+        <!-- >> Headline Container -->
+        <div class="headline">
+            <h3>{{ this.app.headline }}</h3>
+        </div>
+
+        <!-- >> Main Container -->
+        <div class="c-main">
+            @for (item of app.infobox; track item) {
+
+            <!-- >> Main Infobox -->
+            <figure class="infobox">
+                <img src="img/main/ellipse_dark.svg" alt="ellipse_dark">
+                <figcaption>
+                    <div class="infobox-header">
+                        <span>{{ item.header.headline }}</span>
+                        <span>
+                            {{ item.header.text }}
+                            <span>{{ item.header.project_name }}</span>
+                        </span>
+                    </div>
+                    <div class="infobox-main">
+                        <p>
+                            {{ item.main.text }}
+                        </p>
+                    </div>
+                    <div class="infobox-footer">
+                        <a href="{{ item.footer.url }}">{{ item.footer.link_text }}</a>
+                    </div>
+                </figcaption>
+            </figure>
+            }
+        </div>
+    </div>
+</section>
