--- a/src/styles/_global-colors.scss
+++ b/src/styles/_global-colors.scss
@@ -4,6 +4,7 @@ $devmode: true;
 $main-color-black: #262E34;
 $main-color-lightblack: #2c373f;
 $main-color-lightblue: #89BCD9;
+$main-color-lightblue-hover: #89bcd936;
 $main-color-white: #F8F5EC;
 $main-color-white-hover: #F8F5EC1F;
 $main-color-lightgray: #262E341F;
