--- a/src/app/desktop/main/contact-me/contact-me.component.html
+++ b/src/app/desktop/main/contact-me/contact-me.component.html
@@ -1,3 +1,11 @@
+<!-- 
+    Contact Toto List:
+    ------------------
+    > Form Funktion TS
+    > Form Validate (HTML / SCSS / TS)
+    > Privacy policy Funktion 
+-->
+
 <section>
     <div>
         <!-- >> Headline Container -->
@@ -8,8 +16,8 @@
             <div class="header-nav-btn">
                 <figure>
                     <hr>
-                    <a href="#navHeader">
-                        <img src="img/buttons/arrow_btn_down.svg" alt="arrow_down_button">
+                    <a href="#navHeader" (click)="this.setActiveMenuItem('')">
+                        <img src="img/buttons/arrow_btn_down.svg" alt="arrow__button">
                     </a>
                 </figure>
             </div>
