--- a/src/app/desktop/header/header.component.html
+++ b/src/app/desktop/header/header.component.html
@@ -25,24 +25,23 @@
                     <div class="right-icon-bar">
                         <div>
                             <figure class="right-icon-bar-item">
-                                <img src="img/logos/email_logo.svg" alt="email_logo">
-                                <!-- No Link Ref -->
-                                <a href="#">
-                                    <img src="img/logos/email_logo_hover.svg" alt="email_logo_hover">
+                                <img src="img/logos/header/email_logo.svg" alt="email_logo">
+                                <a href="#navContact" (click)="this.setActiveMenuItem('menuItem3')">
+                                    <img src="img/logos/header/email_logo_hover.svg" alt="email_logo_hover">
                                 </a>
                             </figure>
                             <figure class="right-icon-bar-item">
-                                <img src="img/logos/github_logo.svg" alt="github_logo">
-                                <!-- No Link Ref -->
-                                <a href="#">
-                                    <img src="img/logos/github_logo_hover.svg" alt="github_logo_hover">
+                                <img src="img/logos/header/github_logo.svg" alt="github_logo">
+                                <a href="https://github.com/dhm-blue-phoenix/portfolio.git" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <img src="img/logos/header/github_logo_hover.svg" alt="github_logo_hover">
                                 </a>
                             </figure>
                             <figure class="right-icon-bar-item">
-                                <img src="img/logos/linkedin_logo.svg" alt="linkedin_logo">
+                                <img src="img/logos/header/linkedin_logo.svg" alt="linkedin_logo">
                                 <!-- No Link Ref -->
                                 <a href="#">
-                                    <img src="img/logos/linkedin_logo_hover.svg" alt="linkedin_logo_hover">
+                                    <img src="img/logos/header/linkedin_logo_hover.svg" alt="linkedin_logo_hover">
                                 </a>
                             </figure>
                         </div>
@@ -59,7 +58,7 @@
                 <div class="right-btn">
                     <figure>
                         <hr>
-                        <a href="#navWhy">
+                        <a href="#navWhy" (click)="this.setActiveMenuItem('menuItem0')">
                             <img src="img/buttons/arrow_btn_down.svg" alt="arrow_down_button">
                         </a>
                     </figure>
