--- a/src/app/desktop/navbar/navbar.component.html
+++ b/src/app/desktop/navbar/navbar.component.html
@@ -1,10 +1,9 @@
 <section>
     <nav>
-
         <!-- >> Left Container -->
         <div>
             <figure class="logo">
-                <a href="#navHeader">
+                <a href="#navHeader" (click)="this.setMenuRef('')">
                     <img src="img/logos/logo_dark.svg" alt="logo_dark">
                 </a>
             </figure>
@@ -16,7 +15,7 @@
                     <li class="menu-item">
                         <a href="#{{ this.navMenuRef[i] }}" [id]="'menuItem' + i"
                             [className]="this.activMenuItem == 'menuItem' + i && 'activ-menu-item'"
-                            (click)="this.getMenuRef('menuItem' + i)">
+                            (click)="this.setMenuRef('menuItem' + i)">
                             <span>{{ item }}</span>
                         </a>
                     </li>
